<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Task manager</string>

    <string name="ok" translatable="false">Ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failure_to_connect">Server bilan ulanishda xatolik yuz berdi</string>
    <string name="russian" translatable="false">Русский язык</string>
    <string name="uzb_cyrillic" translatable="false">Ўзбек тили</string>
    <string name="uzb" translatable="false">O\'zbek tili</string>
    <string name="change_language">Til o\'zgartirish</string>
    <string name="assignment">Topshiriqlar</string>
    <string name="accepted">Qabul qilindi</string>
    <string name="done">Bajarildi</string>
    <string name="in_progress">Jarayonda</string>
    <string name="returned_for_inspection">Tekshiruvga qaytarilgan</string>
    <string name="report">Topshiriqlar xisoboti</string>
    <string name="report_description">Siz ushbu bo\'limda yakunlangan, jarayonda, vaqtincha to\'xtatilgan va qabul qilinmagan topshiriqlar haqida ma\'lumot olasiz</string>
    <string name="List_of_employees">Hodimlar ro’yxati</string>
    <string name="count">Soni</string>
    <string name="score">Bal</string>
    <string name="degree">Daraja</string>
    <string name="current_password">Joriy parol</string>
    <string name="new_password">Yangi parol</string>
    <string name="confirm_password">Paroni tasdiqlash</string>
    <string name="language">Dastur tili</string>
    <string name="menu_settings">Sozlamalar</string>
    <string name="settings_language">Dastur tili</string>
    <string name="current_lang">O\'zbek tili</string>
    <string name="input_login_please">Iltimos, loginingizni kiriting</string>
    <string name="input_password_please">Iltimos, parolingizni kiriting</string>
    <string name="cycrilic_error">Parol lotin harflar yoki sonlardan tashkil topgan bo\'lishi kerak</string>
    <string name="sign_in_btn">Kirish</string>
    <string name="create_pass_desc">Shaxsiy ma`lumotlaringizni PIN-kod bilan ximoyalash uchun quyidagi maydonlarni to`ldiring</string>
    <string name="pin_code">PIN-code</string>
    <string name="pin_code_is_required">PIN-code kiritilishi shart</string>
    <string name="pin_error">PIN-code xato kiritildi</string>
    <string name="change_pin_code">PIN-codeni o`zgartirish</string>
    <string name="new_password_cannot_be_empty">Yangi parol kiritilishi lozim</string>
    <string name="enter_confirm_password">Iltimos, tasdiqlash parolini kiriting</string>
    <string name="enter_confirm_pin_code">Iltimos, tasdiqlash PIN-code kiriting</string>
    <string name="passwords_do_not_match">Parollar mos kelmadi</string>
    <string name="pin_code_do_not_match">PIN-code mos kelmadi</string>
    <string name="change_password">Parolni o`zgartirish</string>
    <string name="are_you_sure_change">Haqiqatan ham o\'zgartirishni xohlaysizmi?</string>
    <string name="cancel">Bekor qilish</string>
    <string name="Home">Asosiy</string>
    <string name="enter_the_program">Dasturga kirish</string>
    <string name="login">Login</string>
    <string name="password">Parol</string>
    <string name="confirm_pin_code">PIN-codeni tasdiqlash</string>
    <string name="current_pin_code">Joriy PIN-code</string>
    <string name="new_pin_code">Yangi PIN-code</string>
    <string name="new_pin_code_cannot_be_empty">Yangi PIN-code kiritlishi lozim</string>
    <string name="log_out">Dasturdan chiqish</string>
    <string name="tasks">Tasklar</string>
    <string name="statistics">Statistika</string>
    <string name="welcome">Shaxsiy kabinetingizga kirish uchun formani to’ldiring</string>
    <string name="forgot_password"><u>Parolingizni unutdingizmi?</u></string>
    <string name="loading">Jarayonda</string>
    <string name="completed">Yakunlangan</string>
    <string name="returned">Qaytarilgan</string>
    <string name="password_recovery">Parolni qayta tiklash</string>
    <string name="fill_out_form">Parolni tiklash uchun shaklini to\'ldiring</string>
    <string name="all">Barchasi</string>
    <string name="new_task">Yangi</string>
    <string name="pause">To\'xtatilgan</string>
    <string name="done_tasks">Tekshiruvda</string>
    <string name="accepted_tasks">Qabul qilingan</string>
    <string name="appointed">Biriktirilgan</string>
    <string name="change_status_pause">Pausaga o\'tkazish</string>
    <string name="change_status_process">Jarayonga o\'tkazish</string>
    <string name="change_status_accept">Qabul qilish</string>
    <string name="wont_log_out">Dasturdan chiqishni hohlaysizmi?</string>
    <string name="description">Tavsif</string>
    <string name="choose">Tanlang</string>
    <string name="performer_appointed">Ijrochi tayinlangan</string>
    <string name="rated">Baholangan</string>
    <string name="failed_tasks">Bajarilmagan</string>
    <string name="done_task">Bajarilgan topshiriqlar</string>
    <string name="process_task">Jarayondagi topshiriqlar</string>
    <string name="download_task">Qabul qilingan topshiriqlar</string>
    <string name="suspended">To\'xtatilgan</string>
    <string name="dayly">Kunlar hisobida</string>
    <string name="monthly">Oylar hisobida</string>
    <string name="report_tasks">Topshiriqlar hisoboti</string>
    <string name="report_projects">Loyihalar kesimida topshiriqlar</string>
    <string name="hard">Yuqori</string>
    <string name="medium">O\'rta</string>
    <string name="easy">Past</string>
    <string name="open">Open</string>
    <string name="close">Cloce</string>
    <string name="to_created_date">Yaratilgan sanaga nisbatan:</string>
    <string name="current_status_date">Joriy holatga o\'tish sanasi:</string>
    <string name="started_date">Boshlanish sanasi</string>
    <string name="end_date">Bajarish sanasi</string>
    <string name="task_type">Topshiriq turi</string>
    <string name="creator_task">Task yaratuvchi</string>
    <string name="created_date">Yaratilgan sana</string>


</resources>