<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText"
    android:backgroundTint="@color/black"
    >
    <item
        android:id="@+id/nav_language"
        android:title="@string/change_language"
        android:icon="@drawable/ic_language"
        />
    <item
    android:id="@+id/nav_change_pin"
    android:title="@string/change_pin_code"
    android:icon="@drawable/icon_lock"
    />
    <item
        android:id="@+id/nav_change_pass"
        android:title="@string/change_password"
        android:icon="@drawable/ic_fingerprint"
        />
    <item
        android:id="@+id/nav_log_out"
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out"
        />





</menu>