<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />
<!--    <item-->
<!--        android:id="@+id/tasksFragment"-->
<!--        android:icon="@drawable/ic_task"-->
<!--        android:title="@string/tasks"-->
<!--        android:enabled="false"-->
<!--        android:visible=""-->
<!--        />-->
<!--    <item-->
<!--        android:id="@+id/default_item"-->
<!--        android:enabled="false"-->
<!--        android:title="">-->

<!--    </item>-->


    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_settings" />
</menu>