<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.change_password_fragment.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_24"
        android:paddingEnd="@dimen/padding_24">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            tools:hint="@string/current_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:maxLength="30"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            hintWithLocale="@{Lang.newPassword}"
            app:passwordToggleEnabled="true"
            tools:hint="@string/new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            hintWithLocale="@{Lang.confirmPassword}"
            app:passwordToggleEnabled="true"
            tools:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            textWithLocale="@{Lang.ok}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:onClick="@{()->controller.buttonOkClick(textLayoutCurrentPassword, textLayoutNewPassword, textLayoutConfirmPassword)}"
            tools:text="ok" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>