<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="controller"
            type="com.xojiakbar.taskmanager.fragments.choose_language_fragment.ChooseLanguageController" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".fragments.choose_language_fragment.ChooseLanguageFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_48"
            android:src="@drawable/ic_furor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24"
            app:cardCornerRadius="16dp"
            app:contentPadding="16dp"

            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_24"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="@font/urbanistregular"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/btn_uz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/urbanistregular"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:onClick="@{()->controller.onUzLotin()}"
                    android:paddingVertical="@dimen/padding_10"
                    android:text="@string/uzb"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/btn_uk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/urbanistregular"
                    android:background="?attr/selectableItemBackground"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:onClick="@{()->controller.onUzKiril()}"
                    android:paddingVertical="@dimen/padding_10"
                    android:text="@string/uzb_cyrillic"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_ru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/urbanistregular"
                    android:onClick="@{()->controller.onRu()}"
                    android:paddingVertical="@dimen/padding_10"
                    android:text="@string/russian"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_man"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
