<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="controller"
            type="com.xojiakbar.taskmanager.fragments.change_pin_code_fragment.ChangePinCodeUIController" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.change_password_fragment.ChangePasswordFragment">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:tint="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_16"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/urbanistregular"
                android:text="@string/change_pin_code"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_marginTop="@dimen/margin_16"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:placeholderTextColor="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:hint="@string/current_pin_code"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mtt_new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:placeholderTextColor="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:hint="@string/new_pin_code"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mtt_confirm_new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:placeholderTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:hint="@string/confirm_pin_code"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_margin="@dimen/margin_24"
                android:onClick="@{()->controller.onClickOk(currentPasswordLayout, mttNewPassword, mttConfirmNewPassword)}"
                android:text="@string/ok"
                android:textColor="@color/white" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
