<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="controller"
            type="com.xojiakbar.taskmanager.fragments.create_pin_code.CreatePinCodeUIController" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_48"
                android:src="@drawable/ic_furor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                android:paddingHorizontal="@dimen/margin_24"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginBottom="@dimen/margin_24"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pin_code"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:text="@string/create_pass_desc"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        tools:ignore="SpUsage" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pin_code_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="4"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:placeholderTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="15dp"
                            android:hint="@string/pin_code"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:onTextChanged="@{(text, start, before, count)->controller.onTextChanged(text, pinCodeLayout,confirmPinLayout)}"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_pin_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="4"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:placeholderTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="15dp"
                            android:hint="@string/confirm_pin_code"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:onTextChanged="@{(text, start, before, count)->controller.onTextChanged(text, pinCodeLayout,confirmPinLayout)}"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_marginTop="@dimen/margin_16"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:onClick="@{(view)->controller.buttonOkClick(pinCodeLayout, confirmPinLayout)}"
                        android:text="@string/ok"
                        android:textColor="@color/white" />


                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>